# BlogAutoAi

./: .env.example  Dockerfile  Dockerfile.easypanel  GUIA_INSTALACAO_FINAL.md  INSTALACAO_EASYPANEL.md  INSTALACAO_EASYPANEL_SIMPLES.md  README.md  app.py  automation_cron.py  automation_daemon.py  config.py  docker-compose.yml  easypanel-template.json  export_database.py  install_cron.sh  main.py  models.py  models_automation.py  pyproject.toml  run_automation.py  setup_mysql.py
attached_assets/: Pasted-1-AN-LISE-E-INSIGHTS-DE-CONTE-DO-Adicionar-um-novo-painel-de-An-lise-de-Desempenho-que-most-1747690739541.txt  Pasted-A-partir-de-agora-implemente-as-seguintes-funcionalidades-de-cria-o-autom-tica-de-artigos-de-blog--1748449233792.txt
routes/: analytics_routes.py  article_routes.py  auth_routes.py  automation_routes.py  dashboard_routes.py  settings_routes.py
services/: ai_service.py  automation_engine.py  automation_monitor.py  news_processor.py  rss_service.py  scheduler_service.py  wordpress_service.py
static/css/: styles.css
static/js/: collaborative-editing.js  dashboard.js  editor.js  loading-animations.js  main.js  mood-selector.js  quick-tips.js  settings.js
templates/: article_detail.html  article_list.html  base.html  create_article.html  dashboard.html  edit_article.html  login.html  profile.html  register.html
templates/analytics/: article_detail.html  index.html  report.html  seo_analysis.html
templates/automation/: feeds.html  index.html  monitoring.html  placeholder.html  themes.html
templates/settings/: api_keys.html  index.html  (+1 more)
