[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.79.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "apscheduler>=3.11.0",
    "html2text>=2025.4.15",
    "requests>=2.32.3",
    "python-dotenv>=1.1.0",
    "trafilatura>=2.0.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.13.4",
    "pymysql>=1.1.1",
    "schedule>=1.2.2",
]
